Working on main template and site design.

--- a/public/assets/css/reset.css
+++ b/public/assets/css/reset.css
@@ -1,10 +1,7 @@
-/* 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-*/
+/*
+ * Original Author: Richard Clark 
+ * Modified By: David Myers
+ */
 
 html, body, div, span, object, iframe, 
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
@@ -51,6 +48,8 @@ q:before, q:after {
 }
 
 a {
+    text-decoration: none;
+    color: inherit;
     margin:0;
     padding:0;
     font-size:100%;
