--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,39 @@
-h1 {
-	font-size: 1.5em;
+html, body
+{
+	height: 100%;
+}
+
+body
+{
+	font-family: 'helvetica neue', helvetica, arial, sans-serif;
+}
+
+body > header, body > footer
+{
+	background-color: #232323;
+	color: #fff;
+	height: 3rem;
+	line-height: 3rem;
+	padding: 0 1rem;
+	width: calc(100% - 2rem);
+}
+
+body > header
+{
+	text-align: left;
+}
+
+body > footer
+{
+	text-align: center;
+}
+
+body > main
+{
+	min-height: calc(100% - 6rem);
+}
+
+h1
+{
+	font-size: 1.5rem;
 }
