--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,6 +5,7 @@ html, body
 
 body
 {
+	color: #232323;
 	font-family: 'helvetica neue', helvetica, arial, sans-serif;
 }
 
@@ -12,28 +13,63 @@ body > header, body > footer
 {
 	background-color: #232323;
 	color: #fff;
+	display: flex;
+		align-items: center;
 	height: 3rem;
-	line-height: 3rem;
 	padding: 0 1rem;
 	width: calc(100% - 2rem);
 }
 
 body > header
 {
+	justify-content: space-between;
 	text-align: left;
 }
 
 body > footer
 {
+	justify-content: space-around;
 	text-align: center;
 }
 
 body > main
 {
-	min-height: calc(100% - 6rem);
+	min-height: calc(100% - 8rem);
+	padding: 1rem;
 }
+	body > main h2
+	{
+		margin: 0.5rem 0;
+	}
+
+	body > main p
+	{
+		line-height: 1.2rem;
+		margin: 0 0 0.5rem 0.5rem;
+	}
 
 h1
 {
 	font-size: 1.5rem;
+}
+
+h2
+{
+	font-size: 1.3rem;
+}
+
+
+#game-description, #game-preview
+{
+	width: 45%;
+}
+
+#game-description
+{
+	float: left;
+}
+
+#game-preview
+{
+	float: right;
 }
