Now displaying a random subset of cards on page load. It will correctly display however many white card answers it needs based on the number of answers the black card can accept. Next step: animation. May need to clean up code a bit more and separate some of the logic in main.js into its own methods of the Game class. Hoo-rah.

--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -1,15 +1,25 @@
 .card
 {
-	height: 15.5rem;
-	width: 11rem;
+	border-radius: 0.5em;
+	box-shadow: 0 0 0.313em #666;
+	height: 15.5em;
+	padding: 0.5em;
+	width: 11em;
 }
+	.card > p
+	{
+		font-size: 1em;
+		margin: 0;
+	}
 
 .black
 {
 	background-color: #000;
+	color: #fff;
 }
 
 .white
 {
 	background-color: #fff;
+	color: #000;
 }
