--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -19,6 +19,7 @@ body > header, body > footer
 	height: 3rem;
 	padding: 0 1rem;
 	width: calc(100% - 2rem);
+	z-index: 9999;
 }
 
 body > header
@@ -35,8 +36,11 @@ body > footer
 
 body > main
 {
+	display: flex;
+	justify-content: space-between;
 	min-height: calc(100% - 8rem);
 	padding: 1rem;
+	z-index: 1000;
 }
 	body > main h2
 	{
@@ -60,23 +64,13 @@ h2
 }
 
 
-#game-description, #game-preview
+#game-description
 {
 	width: 45%;
 }
 
-#game-description
-{
-	float: left;
-}
-
 #game-preview
 {
-	display: flex;
-	float: right;
-	justify-content: flex-start;
+	position: relative;
+	width: 50%;
 }
-	#game-preview .card
-	{
-		margin-right: 0.5em;
-	}
