Working on switching to mobile-first design.
Started switching this to mobile-first responsive design before it gets
too far.

--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -5,8 +5,8 @@ body > main
 
 .card
 {
+	border: 1px solid #000;
 	border-radius: 0.5em;
-	box-shadow: 0 0 0.313em #666;
 	font-size: 1em;
 	font-weight: bold;
 	height: 15.5em;
