--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7,34 +7,38 @@ html, body
 body
 {
 	/*background: url('../images/tile-hexagon.png');*/
-	background-color: #fff;
+	background-color: #eaeaea;
 	color: #232323;
 	font-family: 'helvetica neue', helvetica, arial, sans-serif;
 }
 
 body > header, body > footer
 {
-	background-color: #232323;
-	/*background-color: rgba(0, 0, 0, 0.5);*/
+	background-color: #444347;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 1px 0 0 rgba(0, 0, 0, 0.1);
 	color: #fff;
-	height: 3rem;
-	padding: 0 1rem;
-	width: calc(100% - 2rem);
+	width: 100%;
 	z-index: 9999;
 }
 
-body > header > div, body > footer > div
+body > header > .head, body > footer > .foot
 {
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
 	min-height: 100%;
+	padding: 1rem;
+}
+
+body > header > .divider
+{
+	background-color: #58575c;
+	height: 0.75rem;
 }
 
 body > header h1
 {
 	font-size: 1.5rem;
-	margin: 0 1rem;
 }
 	body > header h1 a
 	{
@@ -55,29 +59,27 @@ body > header > nav
 	}
 	body > header > nav a
 	{
-		background-color: #312d2a;
+		background-color: #121212;
 		display: block;
-		height: 2.5rem;
 		letter-spacing: 0.125rem;
-		line-height: 2.5rem;
 		margin-bottom: 0.5rem;
+		padding: 0.75rem;
 		text-transform: lowercase;
 	}
 
-body > header .menu-icon
-{
-	margin: 0 1rem;
-}
-
 body > footer
 {
+	background-color: #fff;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1) inset, 0 1px 0 0 rgba(0, 0, 0, 0.1) inset;
+	color: #232323;
 	justify-content: space-around;
+	min-height: 5rem;
 	text-align: center;
 }
 
 body > main
 {
-	min-height: calc(100% - 8rem);
+	min-height: 100%;
 	padding: 1rem;
 	z-index: 1000;
 }
@@ -144,14 +146,5 @@ h2
 
 @media (max-width: 600px)
 {
-	body > header
-	{
-		padding: 0;
-		width: 100%;
-	}
 
-	body > header h1
-	{
-		
-	}
 }
